Huge performance improvements
- Implementation of broadcast joins when possible.
- Refactorization of mappers and reducers.
- Update tests.
- Some renaming.